; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/ti/cpsw/extr_if_cpsw.c_cpswp_start.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/ti/cpsw/extr_if_cpsw.c_cpswp_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32, %struct.cpswp_softc* }
%struct.cpswp_softc = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64 }

@IFF_DRV_RUNNING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ifnet*)* @cpswp_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cpswp_start(%struct.ifnet* %0) #0 {
  %2 = alloca %struct.ifnet*, align 8
  %3 = alloca %struct.cpswp_softc*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %2, align 8
  %4 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %5 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %4, i32 0, i32 1
  %6 = load %struct.cpswp_softc*, %struct.cpswp_softc** %5, align 8
  store %struct.cpswp_softc* %6, %struct.cpswp_softc** %3, align 8
  %7 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %8 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = load i32, i32* @IFF_DRV_RUNNING, align 4
  %11 = and i32 %9, %10
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %21, label %13

13:                                               ; preds = %1
  %14 = load %struct.cpswp_softc*, %struct.cpswp_softc** %3, align 8
  %15 = getelementptr inbounds %struct.cpswp_softc, %struct.cpswp_softc* %14, i32 0, i32 0
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %13, %1
  br label %37

22:                                               ; preds = %13
  %23 = load %struct.cpswp_softc*, %struct.cpswp_softc** %3, align 8
  %24 = getelementptr inbounds %struct.cpswp_softc, %struct.cpswp_softc* %23, i32 0, i32 0
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %24, align 8
  %26 = call i32 @CPSW_TX_LOCK(%struct.TYPE_6__* %25)
  %27 = load %struct.cpswp_softc*, %struct.cpswp_softc** %3, align 8
  %28 = call i32 @cpswp_tx_enqueue(%struct.cpswp_softc* %27)
  %29 = load %struct.cpswp_softc*, %struct.cpswp_softc** %3, align 8
  %30 = getelementptr inbounds %struct.cpswp_softc, %struct.cpswp_softc* %29, i32 0, i32 0
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %30, align 8
  %32 = call i32 @cpsw_tx_dequeue(%struct.TYPE_6__* %31)
  %33 = load %struct.cpswp_softc*, %struct.cpswp_softc** %3, align 8
  %34 = getelementptr inbounds %struct.cpswp_softc, %struct.cpswp_softc* %33, i32 0, i32 0
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** %34, align 8
  %36 = call i32 @CPSW_TX_UNLOCK(%struct.TYPE_6__* %35)
  br label %37

37:                                               ; preds = %22, %21
  ret void
}

declare dso_local i32 @CPSW_TX_LOCK(%struct.TYPE_6__*) #1

declare dso_local i32 @cpswp_tx_enqueue(%struct.cpswp_softc*) #1

declare dso_local i32 @cpsw_tx_dequeue(%struct.TYPE_6__*) #1

declare dso_local i32 @CPSW_TX_UNLOCK(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
